# taxonium

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .readthedocs.yaml  AGENTS.md  CITATION.bib  CNAME  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile.backend  Dockerfile.frontend  Dockerfile.proxy  LICENSE  README.md  REFACTORING_NOTES.md  asset-manifest.json  bac120.tree  cog_global_tree.newick.REMOVED.git-id  cpp_missing_features.md  craco.config.js  index.html  package-lock.json  package.json  tailwind.config.js  taxodium.proto  tree.proto  vercel.json  ~$PickingAnalysis.xlsx
.deployments/: backend_dep.yaml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/selenium/: selenium.py
.github/selenium_tests/: selenium_tests.py
.github/workflows/: build-cpp.yml  build-viral-usher-web.yml  build-web.yml  build.yml  build_gh_ver_for_lshtm.yml  check-types.yml  docker-publish-backend.yml  docker-publish-frontend.yml  docker-publish-proxy.yml  docker-publish.yml  e2e-tests.yml  electron-build.yml  electron-e2e.yml  electron-release.yml  frontend-test.yml  integration-test.yml  integration_test.yml  main.yml  playwright.yml  precommit-checker.yaml  prettier.yml  python-build.yml  python-format.yaml2  (+8 more)
backend/: README.md  config_gisaid.json  config_public.json  filtering.js  main.2py  main.py  make_pandas.py  package-lock.json  package.json  playground.ipynb  server.js  summary.json  taxonium_pb2.py
data_processing/: MN908947.gb  README.md  _DATA_FORMAT.md  cog_global_2021-06-28_tree.newick.REMOVED.git-id  cog_global_tree.newick.REMOVED.git-id  compare_trees.py  cov2_genome.py  deal_with_vcf.py  download.sh  get_tree_from_proto.py  install_deps.sh  make_files.py  make_proto.sh  make_tree.py  mutation_rates.tsv.gz.REMOVED.git-id  parsimony_pb2.py  taxodium_pb2.py  taxonium_pb2.py  time_tree.nwk.gz.REMOVED.git-id  time_tree2.nwk.gz.REMOVED.git-id  tree_pb2.py  usher_processing.py
data_processing_tools/: process.py  tax_writing.py  taxonium_pb2.py  test.ipynb  tfci.jsonl  ushertools.py
docs/: advanced.md  app.md  component.md  conf.py  index.md  index.rst  loading_very_large_trees.md  requirements.txt  taxoniumtools.md  treenome.md
my-project/: .eslintrc.cjs  esbuild.js  package-lock.json  package.json  test.html  vite.config.js
process/: requirements.txt  test.ipynb
proxy/: kube.yml  package-lock.json  package.json  server.js
public/: date_comparison.tsv.gz.REMOVED.git-id  index.html  nodelist.pb.REMOVED.git-id  nodelist.pb.gz.REMOVED.git-id  nodelist.zip.REMOVED.git-id  output.taxodium.pb.gz.REMOVED.git-id  public-latest.all.masked.taxodium.pb.gz.REMOVED.git-id  taxodium.proto  taxonium.proto  timetree.pb.gz.REMOVED.git-id  tree.proto
src/: App.css  App.js  App.jsx  Deck.js  Deck.jsx  NodeHoverTip.jsx  Taxodium.jsx  Taxonium.jsx  index.css  index.js  newDeck.jsx
taxonium-demo/: basic.html  debug.html  index.html  package-lock.json  package.json  simple.html  taxonium-dist  test-exports.html  verify.js
taxonium_backend/: .gitignore  README.md  config_gisaid.json  config_public.json  package-lock.json  package.json  server.js
taxonium_component/: .gitignore  AGENTS.MD  AGENTS.md  README.md  craco.config.js  index.js  output.js  package-lock.json  package.json  playwright.config.ts  postcss.config.js  rollup.config.js  tailwind.config.js  test-minimap.js  tsconfig.json  vercel.json  vite.config.js  vite.config.ts  vitest.config.js  vitest.config.ts  vitest.setup.js  vitest.workspace.js  webpack.config.js
taxonium_component2/: package-lock.json  package.json  vite.config.js  vitest.workspace.js
taxonium_data_handling/: README.md  exporting.js  filtering.js  importing.js  index.js  package-lock.json  package.json
taxonium_electron/: .gitignore  README.md  child.js  download.sh  index.html  main.js  package-lock.json  package.json  preload.js  styles.css
taxonium_electron2/: .gitignore  download.sh  forge.config.js  index.html  main.js  package-lock.json  package.json  playwright.config.js  preload.js  vite.config.js  vite.renderer.config.mjs
taxonium_placer/: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  test_client.html
taxonium_tools/: pyproject.toml  setup.cfg
taxonium_web_client/: .babelrc  .gitignore  README.md  craco.config.js  package.json  tailwind.config.js  webpack.config.js
taxonium_website/: index.html  package-lock.json  package.json  playwright.config.js  vercel.json  vite.config.js
taxonium_website_next/: .env.local.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json
taxoniumtools/: .gitignore  CLAUDE.md  README.md  compare_mutations.py  debug_aa.cpp  pyproject.toml  setup.cfg  simple_test  test_equivalence.py
taxoniumtools/benchmarks/: benchmark_usher_to_taxonium.py
taxoniumtools/node/: README.md  jstree.js  package-lock.json  package.json  usher_to_taxonium.js
taxoniumtools/src/taxoniumtools/: __init__.py  __main__.py  newick_to_taxonium.py  parsimony_pb2.py  usher_to_taxonium.py  ushertools.py  utils.py  view_taxonium.py  view_taxonium_tree.py
taxoniumtools/taxoniumtools_cpp/: CMakeLists.txt  README.md
taxoniumtools/taxoniumtools_cpp/include/: cxxopts.hpp
taxoniumtools/taxoniumtools_cpp/include/taxonium/: codon_table.hpp  genbank_parser.hpp  gene.hpp  jsonl_writer.hpp  memory_pool.hpp  metadata_reader.hpp  mutation.hpp  node.hpp  progress_bar.hpp  protobuf_parser.hpp  string_pool.hpp  string_table.hpp  tree.hpp  utils.hpp
taxoniumtools/taxoniumtools_cpp/src/: codon_table.cpp  genbank_parser.cpp  jsonl_writer.cpp  main.cpp  metadata_reader.cpp  mutation.cpp  node.cpp  protobuf_parser.cpp  tree.cpp  utils.cpp
taxoniumtools/taxoniumtools_cpp/test/: CMakeLists.txt  compatibility_test_plan.md  test_basic.cpp  test_gb_integration.cpp  test_genbank_multipart.cpp
taxoniumtools/test_data/: hu1.gb  mpox.pb  mpox_ref.fasta  ref_mpox.gb  test_config.json  tfci.pb
tester/: package.json
viral_usher_web/: .gitignore  CLAUDE.md  Dockerfile  README.md  upload_sidecar.py
(+801 files in other folders)
