[metadata]
name = taxoniumtools
author = Theo Sanderson
author_email = theo@theo.io
description = Generate files for taxonium
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/theosanderson/taxonium
project_urls =
    Bug Tracker = https://github.com/theosanderson/taxonium/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    treeswift
    alive-progress
    biopython<=1.81
    pandas
    google-api-python-client
    protobuf<4
    orjson
    psutil
    docker


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    usher_to_taxonium = taxoniumtools:usher_to_taxonium.main
    newick_to_taxonium = taxoniumtools:newick_to_taxonium.main
    view_taxonium = taxoniumtools:view_taxonium.main
